refactor: optimize webpack config for new html-bundler-webpack-plugin

--- a/sites/fast-website/src/public/header.ejs
+++ b/sites/fast-website/src/public/header.ejs
@@ -8,8 +8,8 @@
             aria-label="Home"
             alt="FAST"
         >
-            <%= require("svg/icon-brand.svg") %> <%=
-            require("svg/icon-brand-fast.svg") %>
+            <img src="svg/icon-brand.svg">
+            <img src="svg/icon-brand-fast.svg">
         </fast-anchor>
         <site-navigation-item href="https://explore.fast.design">Components</site-navigation-item>
         <site-navigation-item href="/docs/introduction">Documentation</site-navigation-item>
@@ -22,7 +22,7 @@
         >
             GitHub
             <span slot="end">
-                <%= require("svg/icon-github.svg") %>
+                <img src="svg/icon-github.svg">
             </span>
         </fast-anchor>
     </site-navigation>
