--- a/sites/fast-website/src/app/css/header.css
+++ b/sites/fast-website/src/app/css/header.css
@@ -46,6 +46,10 @@
     display: flex;
 }
 
+.logo:focus-within {
+    outline: 2px solid var(--neutral-foreground-rest);
+}
+
 .header .github-link::part(control) {
     justify-content: flex-end;
 }
