--- a/sites/website/src/css/custom.css
+++ b/sites/website/src/css/custom.css
@@ -316,6 +316,7 @@ article {
 
 .navbar__link--active {
     --ifm-link-color: #ff4ca3;
+    --ifm-link-hover-color: #FC4579;
 }
 
 .menu__link--active,
