Add dot syntax resolver and enable recursion within repeats

--- a/packages/web-components/fast-html/src/fixtures/partial/partial.html
+++ b/packages/web-components/fast-html/src/fixtures/partial/partial.html
@@ -1,2 +1,4 @@
-<ul><f-repeat value="{{item in items}}"><li>{{item}}</li></f-repeat></ul>
+<f-partial id="test">
+    <ul><f-repeat value="{{item in items}}"><li>{{item.text}}<f-apply partial="test" value="{{item.items}}"></f-apply></li></f-repeat></ul>
+</f-partial>
 <f-apply partial="test" value="{{items}}"></f-apply>
