--- a/packages/web-components/fast-html/src/fixtures/partial/partial.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/partial/partial.fixture.html
@@ -15,7 +15,7 @@
             </template>
         </f-template>
         <test-element id="test">
-            <template shadowrootmode="open"><ul><li>Hello</li><li>Earth<ul><li>pluto<ul><li>Mars</li></ul></li></ul></li></ul></template>
+            <template shadowrootmode="open"><ul><li>Hello</li><li>Earth<ul><li>Pluto<ul><li>Mars</li></ul></li></ul></li></ul></template>
         </test-element>
     </body>
 </html>
