Add dot syntax resolver and enable recursion within repeats (#7088)
# Pull Request

## 📖 Description

This change adds:
- A path resolver for dot syntax references in the declarative HTML syntax
- Enables recursion within repeat elements

## ✅ Checklist

### General

<!--- Review the list and put an x in the boxes that apply. -->

- [ ] I have included a change request file using `$ npm run change`
- [x] I have added tests for my changes.
- [x] I have tested my changes.
- [x] I have updated the project documentation to reflect my changes.
- [x] I have read the [CONTRIBUTING](https://github.com/microsoft/fast/blob/main/CONTRIBUTING.md) documentation and followed the [standards](https://github.com/microsoft/fast/blob/main/CODE_OF_CONDUCT.md#our-standards) for this project.

--- a/packages/web-components/fast-html/src/fixtures/partial/partial.fixture.html
+++ b/packages/web-components/fast-html/src/fixtures/partial/partial.fixture.html
@@ -9,13 +9,13 @@
         <f-template name="test-element">
             <template>
                 <f-partial id="test">
-                    <ul><f-repeat value="{{item in items}}"><li>{{item}}</li></f-repeat></ul>
+                    <ul><f-repeat value="{{item in items}}"><li>{{item.text}}<f-apply partial="test" value="{{item.items}}"></f-apply></li></f-repeat></ul>
                 </f-partial>
                 <f-apply partial="test" value="{{items}}"></f-apply>
             </template>
         </f-template>
         <test-element id="test">
-            <template shadowrootmode="open"></template>
+            <template shadowrootmode="open"><ul><li>Hello</li><li>Earth<ul><li>Pluto<ul><li>Mars</li></ul></li></ul></li></ul></template>
         </test-element>
     </body>
 </html>
