Remove sidebar toggle on frontpage

--- a/sites/website/src/_includes/root.njk
+++ b/sites/website/src/_includes/root.njk
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" data-rh="true">
     <script src="/js/navbar-toggle.js"></script>
     </head>
-  <body>
+  <body class="{{ 'home' if tag == "home"}}">
     <nav aria-label="Main" class="navbar navbar--fixed-top">
         <div class="navbar__inner">
             <div class="navbar__items"><button aria-label="Toggle navigation bar" aria-expanded="false"
